# funnyTransformers

./: .gitignore  README.md  pyproject.toml
configs/: transformer.yaml
src/ft/: __init__.py  data.py  generate.py  model.py  prepare_data.py  telemetry.py  tokenization.py  train.py  utils.py
src/ft/models/: __init__.py  transformer.py
